--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
     <title>Accueil</title>
     <link rel="stylesheet" href="/dist/main.css">
-    <script src="/dist/build.js"></script>
+
   </head>
   <body>
-	    <script src="//cdn.jsdelivr.net/npm/pouchdb@7.0.0/dist/pouchdb.min.js"></script><!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/pouchdb@7.0.0/dist/pouchdb-6.2.0.min.js"></script>-->
+	    <script src="//cdn.jsdelivr.net/npm/pouchdb@7.0.0/dist/pouchdb.min.js"></script>
       <script>
       var db = new PouchDB('employes');
       // db.replicate.to('http://user:password@monserveur.com/mydb');
 
       </script>
-
+      
 	    <div id="app"></div>
-	    
+	    <script src="/dist/build.js"></script>
 
   </body>
 </html>
